<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="30dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/detalhes_titulo"
            android:textSize="20sp" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detalhes_rotulo_codigo" />
    <EditText
            android:id="@+id/et_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detalhes_rotulo_nome" />
    <EditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detalhes_rotulo_telefone" />
    <EditText
            android:id="@+id/et_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/detalhes_rotulo_idade" />
    <EditText
            android:id="@+id/et_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btn_apagar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detalhes_rotulo_btn_limpar" />
        <View
                android:layout_width="10dp"
                android:layout_height="1dp" />
        <Button
                android:id="@+id/btn_salvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detalhes_rotulo_btn_salvar" />
    </LinearLayout>
</LinearLayout>